--- a/examples/Blink/platformio.ini
+++ b/examples/Blink/platformio.ini
@@ -9,6 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:LGT8F328P]
-platform = lgt8f
+platform = https://github.com/openhoangnc/pio-lgt8fx.git
+platform_packages = framework-lgt8fx@https://github.com/openhoangnc/pio-lgt8fx/raw/master/packages/lgt8f.zip
 board = LGT8F328P
 framework = arduino
