fix: make platform_packages repo

--- a/examples/Blink/platformio.ini
+++ b/examples/Blink/platformio.ini
@@ -10,6 +10,6 @@
 
 [env:LGT8F328P]
 platform = https://github.com/openhoangnc/pio-lgt8fx.git
-platform_packages = framework-lgt8fx@https://github.com/openhoangnc/pio-lgt8fx/raw/master/packages/lgt8f.zip
+platform_packages = framework-lgt8fx@https://github.com/openhoangnc/lgt8fx.git
 board = LGT8F328P
 framework = arduino
